--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>cientistavuador.articlegenerator.ArticleGenerator</exec.mainClass>
+        <exec.mainClass>cientistavuador.articlegenerator.Main</exec.mainClass>
     </properties>
 </project>
