--- a/data/localization.properties
+++ b/data/localization.properties
@@ -24,12 +24,15 @@
 # For more information, please refer to <https://unlicense.org>
 
 # Utterances
+utterances-enabled=true
 utterances-repo=CientistaVuador/cientistavuador.github.io
 utterances-issue-term-prefix=Article
 utterances-label=comments
 # End Utterances
 
 # Values
+default-lang=en-us
+
 title=No Title
 title.pt-BR=Sem Título
 
@@ -47,6 +50,5 @@ footer-notice=The license of this page can be found in the source code or in the
 footer-return.pt-BR=<<< Retornar para Artigos
 footer-notice.pt-BR=A Licença desta página pode ser encontrada no código-fonte ou no [[[https://github.com/CientistaVuador/cientistavuador.github.io:::repositório do github]]].
 
-articles-default-lang=en-US
 articles=Articles
 articles.pt-BR=Artigos
