--- a/data/localization.properties
+++ b/data/localization.properties
@@ -30,6 +30,10 @@ utterances-issue-term-prefix=Article
 utterances-label=comments
 # End Utterances
 
+# OpenGraph
+opengraph-image=https://cientistavuador.github.io/data/icon.png
+# End OpenGraph
+
 # Values
 default-lang=en-us
 
