--- a/data/localization.properties
+++ b/data/localization.properties
@@ -31,7 +31,7 @@ utterances-label=comments
 # End Utterances
 
 # OpenGraph
-opengraph-image=https://cientistavuador.github.io/data/icon.png
+#opengraph-image=https://cientistavuador.github.io/data/icon.png
 # End OpenGraph
 
 # Values
