Finished text block update

--- a/data/localization.properties
+++ b/data/localization.properties
@@ -27,6 +27,7 @@
 utterances-enabled=true
 utterances-repo=CientistaVuador/cientistavuador.github.io
 utterances-issue-term-prefix=Article
+uterrances-issue-term-main-page=Articles
 utterances-label=comments
 # End Utterances
 
