--- a/data/localization.properties
+++ b/data/localization.properties
@@ -36,6 +36,7 @@ utterances-label=comments
 # End OpenGraph
 
 # Values
+website-url=https://cientistavuador.github.io/
 default-lang=en-us
 
 title=No Title
